--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -26,8 +26,12 @@
     "dependencies": {
         "@coreui/coreui": "^2.1.9",
         "@fortawesome/fontawesome-free": "^5.8.1",
+        "moment": "^2.24.0",
         "perfect-scrollbar": "^1.4.0",
         "simple-line-icons": "^2.4.1",
+        "sweetalert2": "^8.9.0",
+        "vform": "^1.0.0",
+        "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.6"
     }
 }
